consistent with videos

--- a/06_Advanced_RAG_Post_Retrieval/06_02_ReRanking.ipynb
+++ b/06_Advanced_RAG_Post_Retrieval/06_02_ReRanking.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "nest_asyncio.apply()\n",
     "\n",
-    "load_dotenv(\"../.env\")\n",
+    "load_dotenv(\"\")\n",
     "\n",
     "sys.path.append('../helpers')\n",
     "\n",
@@ -49,7 +49,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "QDRANT_URL = os.environ['QDRANT_URL'] or getpass(\"Enter your Qdrant URL:\")"
+    "CO_API_KEY = os.environ['CO_API_KEY'] or getpass(\"Enter your Cohere API key: \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "QDRANT_URL = \":memory:\""
    ]
   },
   {
@@ -77,7 +86,59 @@
     "    api_key=OPENAI_API_KEY\n",
     "    )\n",
     "\n",
-    "setup_embed_model(provider=\"openai\", api_key=OPENAI_API_KEY)"
+    "setup_embed_model(\n",
+    "    provider=\"openai\", \n",
+    "    model=\"text-embedding-3-small\",\n",
+    "    api_key=OPENAI_API_KEY\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "from utils import get_documents_from_docstore, group_documents_by_author, sample_documents\n",
+    "\n",
+    "documents = get_documents_from_docstore(\"../data/words-of-the-senpais\")\n",
+    "\n",
+    "random.seed(42)\n",
+    "\n",
+    "documents_by_author = group_documents_by_author(documents)\n",
+    "\n",
+    "senpai_documents = sample_documents(documents_by_author, num_samples=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from llama_index.core import StorageContext\n",
+    "from llama_index.core.settings import Settings\n",
+    "\n",
+    "from llama_index.core.node_parser import SentenceSplitter\n",
+    "from utils import create_index, create_query_engine, ingest, setup_vector_store\n",
+    "\n",
+    "COLLECTION_NAME = \"node-reranking\"\n",
+    "\n",
+    "vector_store = setup_vector_store(QDRANT_URL, QDRANT_API_KEY, COLLECTION_NAME)\n",
+    "\n",
+    "sentence_splitter = SentenceSplitter(chunk_size=256, chunk_overlap=16)\n",
+    "\n",
+    "nodes = ingest(\n",
+    "    documents=senpai_documents,\n",
+    "    transformations=[sentence_splitter, Settings.embed_model],\n",
+    "    vector_store=vector_store\n",
+    ")\n",
+    "index = create_index(\n",
+    "    from_where=\"vector_store\",\n",
+    "    vector_store=vector_store,\n",
+    "    embed_model=Settings.embed_model,\n",
+    "    )"
    ]
   },
   {
@@ -144,7 +205,7 @@
     "\n",
     "Keep in mind that order does matter when you put a reranker and a postprocessor into a query engine. The order in which you list them determines the order in which they are applied.\n",
     "\n",
-    "# Cohere Rerank\n",
+    "# [Cohere Rerank](https://github.com/run-llama/llama_index/blob/main/llama-index-integrations/postprocessor/llama-index-postprocessor-cohere-rerank/llama_index/postprocessor/cohere_rerank/base.py)\n",
     "\n",
     "The `CohereRerank` postprocessor  reranks a list of nodes based on their relevance to a given query using the Cohere API. It enhances the relevance of the retrieved nodes by applying the Cohere reranking model.\n",
     "\n",
@@ -183,10 +244,63 @@
     "from llama_index.postprocessor.cohere_rerank import CohereRerank\n",
     "\n",
     "postprocessor = CohereRerank(\n",
-    "    top_n=2, model=\"rerank-english-v2.0\", api_key=\"YOUR COHERE API KEY\"\n",
-    ")\n",
+    "    top_n=5, model=\"rerank-english-v3.0\", api_key=CO_API_KEY\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils import create_query_engine\n",
+    "from utils import create_query_pipeline\n",
+    "from llama_index.core.query_pipeline import InputComponent\n",
     "\n",
-    "postprocessor.postprocess_nodes(nodes)"
+    "query_engine = create_query_engine(\n",
+    "    index=index, \n",
+    "    mode=\"query\",\n",
+    "    response_mode=\"compact\",\n",
+    "    similiarty_top_k=15,\n",
+    "    vector_store_query_mode=\"mmr\", \n",
+    "    vector_store_kwargs={\"mmr_threshold\": 0.42},\n",
+    "    post_processor=postprocessor,\n",
+    "    return_source=True\n",
+    "    )\n",
+    "\n",
+    "input_component = InputComponent()\n",
+    "\n",
+    "query_chain = [input_component, query_engine]\n",
+    "\n",
+    "query_pipeline = create_query_pipeline(query_chain)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = query_engine.query(\"How can I ensure that my mind is always the sharpest it can be?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_pipeline.run(input=\"How can I ensure that my mind is always the sharpest it can be?\")"
    ]
   },
   {
@@ -200,13 +314,29 @@
     "- [Flag Embedding Reranker](https://docs.llamaindex.ai/en/stable/examples/node_postprocessor/FlagEmbeddingReranker/). You can install this as `pip install llama-index-postprocessor-flag-embedding-reranker` and import as `from llama_index.postprocessor.flag_embedding_reranker import FlagEmbeddingReranker`.\n",
     "\n",
     "\n",
-    "Both have the same usage pattern as above, and you can refer to the source code for the specific arguments."
+    "Both have the same usage pattern as above, and you can refer to the source code for the specific arguments.\n",
+    "\n",
+    "\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "lil_llama_index",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
