--- a/06_Advanced_RAG_Post_Retrieval/06_04_Prompt_Compression.ipynb
+++ b/06_Advanced_RAG_Post_Retrieval/06_04_Prompt_Compression.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
     "\n",
     "nest_asyncio.apply()\n",
     "\n",
-    "load_dotenv(\"../.env\")\n",
+    "load_dotenv(\"\")\n",
     "\n",
     "sys.path.append('../helpers')\n",
     "\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,16 +45,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "QDRANT_URL = os.environ['QDRANT_URL'] or getpass(\"Enter your Qdrant URL:\")"
+    "QDRANT_URL = \":memory:\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,16 +68,67 @@
    "outputs": [],
    "source": [
     "from llama_index.core.settings import Settings\n",
-    "from llama_index.llms.openai import OpenAI\n",
     "from utils import setup_llm, setup_embed_model\n",
     "\n",
     "setup_llm(\n",
-    "    provider=\"openai\", \n",
+    "    provider=\"openai\",\n",
+    "    api_key=OPENAI_API_KEY, \n",
     "    model=\"gpt-4o\", \n",
-    "    api_key=OPENAI_API_KEY\n",
+    "    temperature=0.75, \n",
+    "    system_prompt=\"\"\"Use ONLY the provided context and generate a complete, coherent answer to the user's query. \n",
+    "    Your response must be grounded in the provided context and relevant to the essence of the user's query.\n",
+    "    \"\"\"\n",
     "    )\n",
     "\n",
-    "setup_embed_model(provider=\"openai\", api_key=OPENAI_API_KEY)"
+    "setup_embed_model(provider=\"openai\", model=\"text-embedding-3-small\", api_key=OPENAI_API_KEY)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "from utils import get_documents_from_docstore, group_documents_by_author, sample_documents\n",
+    "\n",
+    "documents = get_documents_from_docstore(\"../data/words-of-the-senpais\")\n",
+    "\n",
+    "random.seed(42)\n",
+    "\n",
+    "documents_by_author = group_documents_by_author(documents)\n",
+    "\n",
+    "senpai_documents = sample_documents(documents_by_author, num_samples=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from llama_index.core import StorageContext\n",
+    "from llama_index.core.settings import Settings\n",
+    "\n",
+    "from llama_index.core.node_parser import SentenceSplitter\n",
+    "from utils import create_index, create_query_engine, ingest, setup_vector_store\n",
+    "\n",
+    "COLLECTION_NAME = \"prompt-compression\"\n",
+    "\n",
+    "vector_store = setup_vector_store(QDRANT_URL, QDRANT_API_KEY, COLLECTION_NAME)\n",
+    "\n",
+    "sentence_splitter = SentenceSplitter(chunk_size=256, chunk_overlap=16)\n",
+    "\n",
+    "nodes = ingest(\n",
+    "    documents=senpai_documents,\n",
+    "    transformations=[sentence_splitter, Settings.embed_model],\n",
+    "    vector_store=vector_store\n",
+    ")\n",
+    "index = create_index(\n",
+    "    from_where=\"vector_store\",\n",
+    "    vector_store=vector_store,\n",
+    "    embed_model=Settings.embed_model,\n",
+    "    )"
    ]
   },
   {
@@ -88,7 +139,7 @@
     "\n",
     "[LongLLMLingua](https://llmlingua.com/) is a method for improving the performance and efficiency of RAG and long context scenarios by compressing prompts. It addresses issues such as the \"lost in the middle\" problem, high costs, and context window limitations in RAG.\n",
     "\n",
-    "<img src=\"https://llmlingua.com/videos/figures/motivation.png\" style=\"width:50%; height:auto;\">\n",
+    "<img src=\"https://llmlingua.com/videos/figures/motivation.png\" style=\"width:80%; height:auto;\">\n",
     "\n",
     "Image Source: [LongLLMLingua Project](https://llmlingua.com/)\n",
     "\n",
@@ -104,7 +155,7 @@
     "\n",
     "Experiments show that LongLLMLingua can improve performance by up to 21.4 points at a 4x compression rate in RAG scenarios, and it outperforms retrieval-based and compression-based methods in long context benchmarks like LongBench and ZeroScrolls.\n",
     "\n",
-    "<img src=\"https://llmlingua.com/videos/figures/LLMLingua.png\"  style=\"width:50%; height:auto;\">\n",
+    "<img src=\"https://llmlingua.com/videos/figures/LLMLingua.png\"  style=\"width:80%; height:auto;\">\n",
     "\n",
     "\n",
     "# [`LongLLMLinguaPostprocessor`](https://github.com/run-llama/llama_index/blob/main/llama-index-integrations/postprocessor/llama-index-postprocessor-longllmlingua/llama_index/postprocessor/longllmlingua/base.py)\n",
@@ -204,7 +255,9 @@
     "response = query_engine.query(\"your query\")\n",
     "\n",
     "# use the query pipeline and apply to your entire dataset if you'd like\n",
-    "```"
+    "```\n",
+    "\n",
+    "\n"
    ]
   }
  ],
@@ -224,7 +277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
