--- a/06_Advanced_RAG_Post_Retrieval/06_05_Self_Correcting.ipynb
+++ b/06_Advanced_RAG_Post_Retrieval/06_05_Self_Correcting.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "nest_asyncio.apply()\n",
     "\n",
-    "load_dotenv(\"../.env\")\n",
+    "load_dotenv(\"\")\n",
     "\n",
     "sys.path.append('../helpers')\n",
     "\n",
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "QDRANT_URL = os.environ['QDRANT_URL'] or getpass(\"Enter your Qdrant URL:\")"
+    "QDRANT_URL = \":memory:\""
    ]
   },
   {
@@ -77,7 +77,11 @@
     "    api_key=OPENAI_API_KEY\n",
     "    )\n",
     "\n",
-    "setup_embed_model(provider=\"openai\", api_key=OPENAI_API_KEY)"
+    "setup_embed_model(\n",
+    "    provider=\"openai\", \n",
+    "    model=\"text-embedding-3-small\",\n",
+    "    api_key=OPENAI_API_KEY\n",
+    "    )"
    ]
   },
   {
@@ -86,33 +90,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datasets import load_dataset\n",
+    "import random\n",
+    "from utils import get_documents_from_docstore, group_documents_by_author, sample_documents\n",
     "\n",
-    "eval_dataset = load_dataset(\"harpreetsahota/LI_Learning_RAG_Eval_Set\", split='train')\n",
+    "documents = get_documents_from_docstore(\"../data/words-of-the-senpais\")\n",
     "\n",
-    "eval_dataset = eval_dataset.filter(lambda x: x['question_groundedness_score'] is not None and x['question_groundedness_score'] >= 5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from llama_index.core.settings import Settings\n",
-    "from utils import setup_llm, setup_embed_model\n",
+    "random.seed(42)\n",
     "\n",
-    "setup_llm(\n",
-    "    provider=\"openai\",\n",
-    "    api_key=OPENAI_API_KEY, \n",
-    "    model=\"gpt-4o\", \n",
-    "    temperature=0.75, \n",
-    "    system_prompt=\"\"\"Use ONLY the provided context and generate a complete, coherent answer to the user's query. \n",
-    "    Your response must be grounded in the provided context and relevant to the essence of the user's query.\n",
-    "    \"\"\"\n",
-    "    )\n",
+    "documents_by_author = group_documents_by_author(documents)\n",
     "\n",
-    "setup_embed_model(provider=\"openai\", api_key=OPENAI_API_KEY)"
+    "senpai_documents = sample_documents(documents_by_author, num_samples=10)"
    ]
   },
   {
@@ -124,24 +111,32 @@
     "from llama_index.core import StorageContext\n",
     "from llama_index.core.settings import Settings\n",
     "\n",
+    "from llama_index.core.node_parser import SentenceSplitter\n",
     "from utils import create_index, create_query_engine, ingest, setup_vector_store\n",
     "\n",
-    "COLLECTION_NAME = \"words-of-the-senpai-semantic-nodes\"\n",
+    "COLLECTION_NAME = \"self-correcting\"\n",
     "\n",
-    "semantic_nodes_vector_store = setup_vector_store(QDRANT_URL, QDRANT_API_KEY, COLLECTION_NAME)\n",
+    "vector_store = setup_vector_store(QDRANT_URL, QDRANT_API_KEY, COLLECTION_NAME)\n",
     "\n",
-    "semantic_nodes_storage_context = StorageContext.from_defaults(vector_store=semantic_nodes_vector_store)\n",
+    "sentence_splitter = SentenceSplitter(chunk_size=256, chunk_overlap=16)\n",
     "\n",
-    "semantic_nodes_index = create_index(from_where=\"vector_store\", vector_store=semantic_nodes_vector_store, storage_context=semantic_nodes_storage_context)\n",
-    "\n",
-    "base_query_engine = semantic_nodes_index.as_query_engine()"
+    "nodes = ingest(\n",
+    "    documents=senpai_documents,\n",
+    "    transformations=[sentence_splitter, Settings.embed_model],\n",
+    "    vector_store=vector_store\n",
+    ")\n",
+    "index = create_index(\n",
+    "    from_where=\"vector_store\",\n",
+    "    vector_store=vector_store,\n",
+    "    embed_model=Settings.embed_model,\n",
+    "    )"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Self-Correcting Query Enginers\n",
+    "# Self-Correcting Query Engines\n",
     "\n",
     "Self-correcting query engines in LlamaIndex evaluate their own output and then self-correct to provide better responses. They are designed to improve the quality of responses from a base query engine.\n",
     "\n",
@@ -203,12 +198,23 @@
     "from llama_index.core.evaluation import RelevancyEvaluator\n",
     "from utils import create_query_engine\n",
     "\n",
+    "base_query_engine = create_query_engine(\n",
+    "    index=index, \n",
+    "    mode=\"query\",\n",
+    "    response_mode=\"compact\",\n",
+    "    similiarty_top_k=15,\n",
+    "    vector_store_query_mode=\"mmr\", \n",
+    "    vector_store_kwargs={\"mmr_threshold\": 0.42},\n",
+    "    return_source=True,\n",
+    "    verbose=True\n",
+    "    )\n",
+    "\n",
     "query_response_evaluator = RelevancyEvaluator()\n",
     "\n",
     "retry_query_engine = RetryQueryEngine(\n",
     "    base_query_engine, \n",
     "    query_response_evaluator\n",
-    "    )\n"
+    "    )"
    ]
   },
   {
@@ -218,10 +224,50 @@
    "outputs": [],
    "source": [
     "from utils import create_query_pipeline\n",
+    "from llama_index.core.query_pipeline import InputComponent\n",
     "\n",
-    "retry_chain = [Settings.llm,  retry_query_engine]\n",
+    "input_component = InputComponent()\n",
     "\n",
-    "retry_query_pipeline = create_query_pipeline(retry_chain)"
+    "query_chain = [input_component, retry_query_engine]\n",
+    "\n",
+    "query_pipeline = create_query_pipeline(query_chain)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils import display_prompt_dict\n",
+    "display_prompt_dict(retry_query_engine.get_prompts())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "retry_query_engine.query(\"I need a framework for decision making that helps me create my own luck\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resp.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_pipeline.run(input=\"I need a framework for decision making that helps me create my own luck\")"
    ]
   },
   {
@@ -270,9 +316,17 @@
     "retry_source_query_engine = RetrySourceQueryEngine(\n",
     "    base_query_engine, \n",
     "    query_response_evaluator\n",
-    "    )\n",
-    "\n",
-    "retry_source_response = retry_source_query_engine.query(query)"
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils import display_prompt_dict\n",
+    "display_prompt_dict(retry_source_query_engine.get_prompts())"
    ]
   },
   {
@@ -283,9 +337,18 @@
    "source": [
     "from utils import create_query_pipeline\n",
     "\n",
-    "retry_source_chain = [Settings.llm,  retry_source_query_engine]\n",
+    "retry_source_chain = [input_component,  retry_source_query_engine]\n",
     "\n",
     "retry_source_query_pipeline = create_query_pipeline(retry_source_chain)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "retry_source_query_pipeline.run(input=\"I need a framework for decision making that helps me create my own luck\")"
    ]
   },
   {
@@ -355,6 +418,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(DEFAULT_GUIDELINES)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"I need a framework for decision making that helps me create my own luck\"\n",
+    "response = query_pipeline.run(input=query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "typed_response = (\n",
     "    response if isinstance(response, Response) else response.get_response()\n",
     ")\n",
@@ -385,11 +467,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from utils import display_prompt_dict\n",
+    "display_prompt_dict(retry_guideline_query_engine.get_prompts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from utils import create_query_pipeline\n",
     "\n",
-    "retry_guideline_chain = [Settings.llm,  retry_guideline_query_engine]\n",
+    "retry_guideline_chain = [input_component, retry_guideline_query_engine]\n",
     "\n",
     "retry_guideline_query_pipeline = create_query_pipeline(retry_guideline_chain)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "retry_guideline_query_pipeline.run(input=\"I need a framework for decision making that helps me create my own luck\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Distinguishing the Query Engines:\n",
+    "\n",
+    "1. **RetryQueryEngine**:\n",
+    "   - **Purpose**: Improves response quality by retrying queries if the initial response fails evaluation.\n",
+    "   - **Mechanism**: Evaluates responses against criteria and retries with modifications if necessary.\n",
+    "\n",
+    "2. **RetrySourceQueryEngine**:\n",
+    "   - **Purpose**: Enhances responses by retrying queries with a refined subset of source nodes.\n",
+    "   - **Mechanism**: Evaluates source nodes individually and retries using only those that pass evaluation.\n",
+    "\n",
+    "3. **RetryGuidelineQueryEngine**:\n",
+    "   - **Purpose**: Improves response quality by evaluating responses against predefined guidelines and refining the query based on feedback.\n",
+    "   - **Mechanism**: Transforms the query based on guideline evaluation feedback and retries until a satisfactory response is achieved.\n",
+    "\n",
+    "Each engine employs a unique approach to refining and improving query responses, addressing different aspects of response quality."
    ]
   }
  ],
@@ -400,8 +522,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.14"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
