--- a/06_Advanced_RAG_Post_Retrieval/06_01_Node_Post_Processing.ipynb
+++ b/06_Advanced_RAG_Post_Retrieval/06_01_Node_Post_Processing.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "nest_asyncio.apply()\n",
     "\n",
-    "load_dotenv(\"../.env\")\n",
+    "load_dotenv(\"\")\n",
     "\n",
     "sys.path.append('../helpers')\n",
     "\n",
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "QDRANT_URL = os.environ['QDRANT_URL'] or getpass(\"Enter your Qdrant URL:\")"
+    "QDRANT_URL = \":memory:\""
    ]
   },
   {
@@ -86,13 +86,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datasets import load_dataset\n",
+    "import random\n",
+    "from utils import get_documents_from_docstore, group_documents_by_author, sample_documents\n",
     "\n",
-    "eval_dataset = load_dataset(\"harpreetsahota/LI_Learning_RAG_Eval_Set\", split='train')\n",
+    "documents = get_documents_from_docstore(\"../data/words-of-the-senpais\")\n",
     "\n",
-    "eval_dataset = eval_dataset.filter(lambda x: x['question_groundedness_score'] is not None and x['question_groundedness_score'] >= 4)\n",
+    "random.seed(42)\n",
     "\n",
-    "smol_eval_set = eval_dataset.shuffle(seed=2022).select(range(10))"
+    "documents_by_author = group_documents_by_author(documents)\n",
+    "\n",
+    "senpai_documents = sample_documents(documents_by_author, num_samples=10)"
    ]
   },
   {
@@ -101,9 +104,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import get_documents_from_docstore\n",
+    "from llama_index.core import StorageContext\n",
+    "from llama_index.core.settings import Settings\n",
     "\n",
-    "senpai_documents = get_documents_from_docstore(\"../data/words-of-the-senpais\")"
+    "from llama_index.core.node_parser import SentenceSplitter\n",
+    "from utils import create_index, create_query_engine, ingest, setup_vector_store\n",
+    "\n",
+    "COLLECTION_NAME = \"node-postprocessors\"\n",
+    "\n",
+    "vector_store = setup_vector_store(QDRANT_URL, QDRANT_API_KEY, COLLECTION_NAME)\n",
+    "\n",
+    "sentence_splitter = SentenceSplitter(chunk_size=256, chunk_overlap=16)\n",
+    "\n",
+    "nodes = ingest(\n",
+    "    documents=senpai_documents,\n",
+    "    transformations=[sentence_splitter, Settings.embed_model],\n",
+    "    vector_store=vector_store\n",
+    ")\n",
+    "index = create_index(\n",
+    "    from_where=\"vector_store\",\n",
+    "    vector_store=vector_store,\n",
+    "    embed_model=Settings.embed_model,\n",
+    "    )"
    ]
   },
   {
@@ -241,9 +263,68 @@
    "source": [
     "from llama_index.core.postprocessor import KeywordNodePostprocessor\n",
     "\n",
-    "postprocessor = KeywordNodePostprocessor(\n",
-    "    required_keywords=[\"word1\", \"word2\"], exclude_keywords=[\"word3\", \"word4\"]\n",
+    "required_keywords = [\"luck\", \"destiny\", \"hardwork\", \"mind\", \"decision\"]\n",
+    "\n",
+    "exclude_keywords = [\"Trulia\", \"Redfin\", \"Zillow\"]\n",
+    "\n",
+    "keyword_postprocessor = KeywordNodePostprocessor(\n",
+    "    required_keywords=required_keywords, exclude_keywords=exclude_keywords\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils import create_query_engine\n",
+    "from utils import create_query_pipeline\n",
+    "from llama_index.core.query_pipeline import InputComponent\n",
+    "\n",
+    "query_engine = create_query_engine(\n",
+    "    index=index, \n",
+    "    mode=\"query\",\n",
+    "    response_mode=\"compact\",\n",
+    "    similiarty_top_k=5,\n",
+    "    vector_store_query_mode=\"mmr\", \n",
+    "    vector_store_kwargs={\"mmr_threshold\": 0.42},\n",
+    "    post_processor=keyword_postprocessor,\n",
+    "    return_source=True\n",
+    "    )\n",
+    "\n",
+    "input_component = InputComponent()\n",
+    "\n",
+    "query_chain = [input_component, query_engine]\n",
+    "\n",
+    "query_pipeline = create_query_pipeline(query_chain)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = query_engine.query(\"How to make good decisions?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response.source_nodes[0].__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_pipeline.run(input=\"How to make good decisions?\")"
    ]
   },
   {
@@ -281,7 +362,7 @@
     "\n",
     "postprocessor = MetadataReplacementPostProcessor(\n",
     "    target_metadata_key=\"window\",\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -391,6 +472,50 @@
     "    threshold_cutoff=0.7\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# You cannot pass a `node_postprocessor` directly to as_retriever.\n",
+    "\n",
+    "In the LlamaIndex framework, node postprocessors are configured and used within the context of a `QueryEngine` rather than directly with the retriever. The retriever is responsible for fetching the most relevant nodes based on the query, and the node postprocessors are then applied within the `QueryEngine` to further refine, filter, or augment these nodes before the final response synthesis.\n",
+    "\n",
+    "Here's how you typically set up a QueryEngine with node postprocessors:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from llama_index.core import VectorStoreIndex\n",
+    "from llama_index.core.retrievers import VectorIndexRetriever\n",
+    "from llama_index.core.query_engine import RetrieverQueryEngine\n",
+    "from llama_index.core.indices.postprocessor import SimilarityPostprocessor\n",
+    "\n",
+    "# Assuming 'index' is already created and configured\n",
+    "retriever = VectorIndexRetriever(\n",
+    "    index=index,\n",
+    "    similarity_top_k=10\n",
+    ")\n",
+    "\n",
+    "# Configure node postprocessors\n",
+    "node_postprocessors = [\n",
+    "    SimilarityPostprocessor(similarity_cutoff=0.7)\n",
+    "]\n",
+    "\n",
+    "# Assemble the Query Engine with the retriever and node postprocessors\n",
+    "query_engine = RetrieverQueryEngine(\n",
+    "    retriever=retriever,\n",
+    "    node_postprocessors=node_postprocessors\n",
+    ")\n",
+    "\n",
+    "# Now you can use this query engine to process queries\n",
+    "response = query_engine.query(\"Your query here\")\n",
+    "print(response)"
+   ]
   }
  ],
  "metadata": {
@@ -400,8 +525,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.14"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
