--- a/06_Advanced_RAG_Post_Retrieval/06_03_FLARE.ipynb
+++ b/06_Advanced_RAG_Post_Retrieval/06_03_FLARE.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "nest_asyncio.apply()\n",
     "\n",
-    "load_dotenv(\"../.env\")\n",
+    "load_dotenv(\"\")\n",
     "\n",
     "sys.path.append('../helpers')\n",
     "\n",
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "QDRANT_URL = os.environ['QDRANT_URL'] or getpass(\"Enter your Qdrant URL:\")"
+    "QDRANT_URL = \":memory:\""
    ]
   },
   {
@@ -68,13 +68,16 @@
    "outputs": [],
    "source": [
     "from llama_index.core.settings import Settings\n",
-    "from llama_index.llms.openai import OpenAI\n",
     "from utils import setup_llm, setup_embed_model\n",
     "\n",
     "setup_llm(\n",
-    "    provider=\"openai\", \n",
+    "    provider=\"openai\",\n",
+    "    api_key=OPENAI_API_KEY, \n",
     "    model=\"gpt-4o\", \n",
-    "    api_key=OPENAI_API_KEY\n",
+    "    temperature=0.75, \n",
+    "    system_prompt=\"\"\"Use ONLY the provided context and generate a complete, coherent answer to the user's query. \n",
+    "    Your response must be grounded in the provided context and relevant to the essence of the user's query.\n",
+    "    \"\"\"\n",
     "    )\n",
     "\n",
     "setup_embed_model(provider=\"openai\", api_key=OPENAI_API_KEY)"
@@ -86,11 +89,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datasets import load_dataset\n",
+    "import random\n",
+    "from utils import get_documents_from_docstore, group_documents_by_author, sample_documents\n",
     "\n",
-    "eval_dataset = load_dataset(\"harpreetsahota/LI_Learning_RAG_Eval_Set\", split='train')\n",
+    "documents = get_documents_from_docstore(\"../data/words-of-the-senpais\")\n",
     "\n",
-    "eval_dataset = eval_dataset.filter(lambda x: x['question_groundedness_score'] is not None and x['question_groundedness_score'] >= 5)"
+    "random.seed(42)\n",
+    "\n",
+    "documents_by_author = group_documents_by_author(documents)\n",
+    "\n",
+    "senpai_documents = sample_documents(documents_by_author, num_samples=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from llama_index.core import StorageContext\n",
+    "from llama_index.core.settings import Settings\n",
+    "\n",
+    "from llama_index.core.node_parser import SentenceSplitter\n",
+    "from utils import create_index, create_query_engine, ingest, setup_vector_store\n",
+    "\n",
+    "COLLECTION_NAME = \"flare\"\n",
+    "\n",
+    "vector_store = setup_vector_store(QDRANT_URL, QDRANT_API_KEY, COLLECTION_NAME)\n",
+    "\n",
+    "sentence_splitter = SentenceSplitter(chunk_size=256, chunk_overlap=16)\n",
+    "\n",
+    "nodes = ingest(\n",
+    "    documents=senpai_documents,\n",
+    "    transformations=[sentence_splitter, Settings.embed_model],\n",
+    "    vector_store=vector_store\n",
+    ")\n",
+    "index = create_index(\n",
+    "    from_where=\"vector_store\",\n",
+    "    vector_store=vector_store,\n",
+    "    embed_model=Settings.embed_model,\n",
+    "    )"
    ]
   },
   {
@@ -185,64 +223,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Setup LLM and Embedding Model\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from llama_index.core.settings import Settings\n",
-    "from utils import setup_llm, setup_embed_model\n",
-    "\n",
-    "setup_llm(\n",
-    "    provider=\"openai\",\n",
-    "    api_key=OPENAI_API_KEY, \n",
-    "    model=\"gpt-4o\", \n",
-    "    temperature=0.75, \n",
-    "    system_prompt=\"\"\"Use ONLY the provided context and generate a complete, coherent answer to the user's query. \n",
-    "    Your response must be grounded in the provided context and relevant to the essence of the user's query.\n",
-    "    \"\"\"\n",
-    "    )\n",
-    "\n",
-    "setup_embed_model(provider=\"openai\", api_key=OPENAI_API_KEY)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Connect to Qdrant\n",
-    "\n",
-    "We can make use of one of our existing collections."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from llama_index.core import StorageContext\n",
-    "from llama_index.core.settings import Settings\n",
-    "\n",
-    "from utils import create_index, create_query_engine, ingest, setup_vector_store\n",
-    "\n",
-    "COLLECTION_NAME = \"words-of-the-senpai-semantic-nodes\"\n",
-    "\n",
-    "semantic_nodes_vector_store = setup_vector_store(QDRANT_URL, QDRANT_API_KEY, COLLECTION_NAME)\n",
-    "\n",
-    "semantic_nodes_storage_context = StorageContext.from_defaults(vector_store=semantic_nodes_vector_store)\n",
-    "\n",
-    "semantic_nodes_index = create_index(from_where=\"vector_store\", vector_store=semantic_nodes_vector_store, storage_context=semantic_nodes_storage_context)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Instantiate query engine and FLARE query engine"
    ]
   },
@@ -254,7 +234,7 @@
    "source": [
     "from llama_index.core.query_engine import FLAREInstructQueryEngine\n",
     "\n",
-    "index_query_engine = semantic_nodes_index.as_query_engine(similarity_top_k=3)\n",
+    "index_query_engine = index.as_query_engine(similarity_top_k=3)\n",
     "\n",
     "flare_query_engine = FLAREInstructQueryEngine(\n",
     "    query_engine=index_query_engine,\n",
@@ -281,8 +261,11 @@
    "outputs": [],
    "source": [
     "from utils import create_query_pipeline\n",
+    "from llama_index.core.query_pipeline import InputComponent\n",
     "\n",
-    "flare_chain = [Settings.llm,  flare_query_engine]\n",
+    "input_component = InputComponent()\n",
+    "\n",
+    "flare_chain = [input_component,  flare_query_engine]\n",
     "\n",
     "flare_query_pipeline = create_query_pipeline(flare_chain)"
    ]
@@ -293,7 +276,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "flare_query_pipeline.run(\"How can I ensure that outward distractions do not interrupt my good thoughts and focus?\")"
+    "flare_query_pipeline.run(input=\"How can I ensure that outward distractions do not interrupt my good thoughts and focus?\")"
    ]
   }
  ],
@@ -313,7 +296,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
