consistent with videos

--- a/01_Getting_Started/01_07_Downloading_Our_Data.ipynb
+++ b/01_Getting_Started/01_07_Downloading_Our_Data.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,9 +66,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File downloaded successfully to ../data/almanack_of_naval_ravikant.pdf\n"
+     ]
+    }
+   ],
    "source": [
     "navalmanack_url = \"https://navalmanack.s3.amazonaws.com/Eric-Jorgenson_The-Almanack-of-Naval-Ravikant_Final.pdf\"\n",
     "\n",
@@ -90,9 +98,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File downloaded successfully to ../data/anthology_of_balaji.pdf\n"
+     ]
+    }
+   ],
    "source": [
     "balaji_url = \"https://balajianthology.s3.us-east-2.amazonaws.com/The+Anthology+of+Balaji.pdf\"\n",
     "\n",
@@ -114,9 +130,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File downloaded successfully to ../data/taoofseneca_vol1-1.pdf\n",
+      "File downloaded successfully to ../data/taoofseneca_vol2.pdf\n",
+      "File downloaded successfully to ../data/taoofseneca_vol3.pdf\n"
+     ]
+    }
+   ],
    "source": [
     "# List of URLs to download\n",
     "letters_urls = [\n",
@@ -144,9 +170,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File downloaded successfully to ../data/skin_in_the_game.pdf\n"
+     ]
+    }
+   ],
    "source": [
     "skin_in_the_game_url = \"https://philosophiatopics.files.wordpress.com/2018/10/skin-in-the-game-nassim-nicholas-taleb.pdf\"\n",
     "\n",
@@ -168,9 +202,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File downloaded successfully to ../data/hackers_and_painters.pdf\n"
+     ]
+    }
+   ],
    "source": [
     "hackers_url = \"https://digtvbg.com/files/books-for-hacking/Hackers%20%26%20Painters%20-%20Big%20Ideas%20From%20The%20Computer%20Age%20by%20Paul%20Graham.pdf\"\n",
     "\n",
@@ -190,12 +232,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File downloaded successfully to ../data/striking-thoughts.pdf\n"
+     ]
+    }
+   ],
    "source": [
     "striking_thoughts = \"https://eddierockerz.com/wp-content/uploads/2020/11/striking-thoughts_-bruce-lees-wisdom-for-daily-living-pdfdrive.com-.pdf\"\n",
-    "download_file(url: striking_thoughts, filename: \"striking-thoughts.pdf\")"
+    "download_file(url= striking_thoughts, filename= \"striking-thoughts.pdf\")"
    ]
   }
  ],
@@ -215,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
