consistent with video

--- a/04_RAG_Evaluation/04_03_How_to_Create_an_Evaluation_Set.ipynb
+++ b/04_RAG_Evaluation/04_03_How_to_Create_an_Evaluation_Set.ipynb
@@ -7,7 +7,20 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!pip install llama-index==0.10.29 ragas==0.1.7 llama-index-embeddings-openai llama-index-llms-openai"
+    "!pip install llama-index==0.10.37 datasets llama-index-embeddings-openai llama-index-llms-openai"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note: you should install the following packages to your environment:\n",
+    "\n",
+    "`pip install datasets`\n",
+    "\n",
+    "`pip install llama-index-embeddings-fastembed`\n",
+    "\n",
+    "`pip install llama-index-llms-mistralai`"
    ]
   },
   {
