consistent with video

--- a/07_Modular_RAG/07_01_Hybrid_Retrievers.ipynb
+++ b/07_Modular_RAG/07_01_Hybrid_Retrievers.ipynb
@@ -7,7 +7,16 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!pip install llama-index==0.10.37 llama-index-embeddings-openai==0.1.9 qdrant-client==1.9.1 llama-index-vector-stores-qdrant==0.2.8 llama-index-llms-openai==0.1.19"
+    "!pip install llama-index==0.10.37 llama-index-embeddings-openai==0.1.9 qdrant-client==1.9.1 llama-index-vector-stores-qdrant==0.2.8 llama-index-llms-openai==0.1.19 llama-index-retrievers-bm25"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note, you will need to run the following:\n",
+    "\n",
+    "`pip install llama-index-retrievers-bm25`"
    ]
   },
   {
@@ -122,38 +131,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4d7fb1d62296414fbadc4343a4934131",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Fetching 9 files:   0%|          | 0/9 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1c8f95210b894888b1564cb0c9a6e18f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Fetching 9 files:   0%|          | 0/9 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from llama_index.core import StorageContext\n",
     "from llama_index.core.storage.docstore import SimpleDocumentStore\n",
@@ -212,7 +192,7 @@
    "source": [
     "# A brief word on vector store query modes\n",
     "\n",
-    "The vector_store_query_mode in LlamaIndex determines the type of search to be performed. Here's a brief description of each mode:\n",
+    "The `vector_store_query_mode` in LlamaIndex determines the type of search to be performed. Here's a brief description of each mode:\n",
     "\n",
     " - `default`: This mode performs a vector search. It retrieves the most similar vectors based on the query vector.  They create a numerical representation of a piece of text, represented as a long list of numbers. These dense vectors can capture rich semantics across the entire piece of text. `alpha=0.75` is used by default.\n",
     "\n",
@@ -348,7 +328,7 @@
    "source": [
     "# Hybrid Fusion Retriever\n",
     "\n",
-    "The Hybrid Fusion Retriever combines of semantic and keyword-based approaches.  This uses a [BM25-based retriever](https://en.wikipedia.org/wiki/Okapi_BM25) with a semantic index. BM25 is a ranking function used by search engines to estimate the relevance of documents to a given search query. \n",
+    "The Hybrid Fusion Retriever combines of semantic and keyword-based approaches.  This uses a [BM25-based retriever](https://en.wikipedia.org/wiki/Okapi_BM25) with a semantic index. [BM25](https://github.com/run-llama/llama_index/blob/main/llama-index-integrations/retrievers/llama-index-retrievers-bm25/llama_index/retrievers/bm25/base.py) is a ranking function used by search engines to estimate the relevance of documents to a given search query. \n",
     "\n",
     "#### How it works\n",
     "\n",
@@ -375,7 +355,7 @@
     "  - `simple`: re-orders results based on original scores\n",
     "\n",
     "\n",
-    "##### **Reciprocal Rerank Algorithm**\n",
+    "##### **[Reciprocal Rerank Algorithm](https://plg.uwaterloo.ca/~gvcormac/cormacksigir09-rrf.pdf)**\n",
     "\n",
     " Since both retrievers calculate a score for the relevance of results, the system uses the reciprocal rerank algorithm to reshuffle the results. This is done without employing additional models or excessive computation, making the process more efficient.\n",
     " \n",
@@ -475,11 +455,12 @@
    "outputs": [],
    "source": [
     "from llama_index.core.response_synthesizers import ResponseMode\n",
+    "from llama_index.core.query_pipeline import InputComponent\n",
     "\n",
     "from utils import create_query_pipeline\n",
-    "from utils import run_generations_on_eval_set\n",
-    "\n",
     "from prompts import HYPE_ANSWER_GEN_PROMPT\n",
+    "\n",
+    "input_component = InputComponent()\n",
     "\n",
     "HYPE_ANSWER_GEN_PROMPT_TEMPLATE = PromptTemplate(HYPE_ANSWER_GEN_PROMPT)\n",
     "\n",
@@ -490,7 +471,7 @@
     "    text_qa_template = HYPE_ANSWER_GEN_PROMPT_TEMPLATE\n",
     "    )\n",
     "\n",
-    "rr_fusion_chain = [ rr_fusion_query_engine]\n",
+    "rr_fusion_chain = [input_component, rr_fusion_query_engine]\n",
     "\n",
     "rr_fusion_query_pipeline = create_query_pipeline(rr_fusion_chain)"
    ]
